--- a/style.css
+++ b/style.css
@@ -2,4 +2,45 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+a {
+  background-color: grey;
+}
+
+nav {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+p { 
+  max-width: 800px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#featured-property {
+  text-align: center;
+}
+
+#details {
+  display: flex;
+  justify-content: space-around;
+  background-color: red;
+}
+
+
